base routing, redirection

--- a/views/contacts.html
+++ b/views/contacts.html
@@ -25,8 +25,12 @@
 </head>
 
 <body>
-  <h1>Home page</h1>
-  <p>Hello it's a site home page</p>
+  <h1>Contacts page</h1>
+  <ul>
+    <li>Tommy</li>
+    <li>Arthur</li>
+    <li>John</li>
+  </ul>
 </body>
 
 </html>
