--- a/views/error.html
+++ b/views/error.html
@@ -25,8 +25,7 @@
 </head>
 
 <body>
-  <h1>Home page</h1>
-  <p>Hello it's a site home page</p>
+  <h1>Something going wrong...</h1>
 </body>
 
 </html>
