--- a/ejs-views/post.ejs
+++ b/ejs-views/post.ejs
@@ -6,20 +6,11 @@
   <%- include('./partials/nav.ejs') %>
   <article>
     <div class="info">
-      <span>05.05.2021</span>
-      <span>Yauhen</span>
+      <span><%= post.date || 'No date' %></span>
+      <span><%= post.author %></span>
     </div>
-    <h1>Post title</h1>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quidem provident, dolores, vero laboriosam nemo
-      mollitia impedit unde fugit sint eveniet, minima odio ipsum sed recusandae aut iste aspernatur dolorem.
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quidem provident, dolores, vero laboriosam nemo
-      mollitia impedit unde fugit sint eveniet, minima odio ipsum sed recusandae aut iste aspernatur dolorem.
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quidem provident, dolores, vero laboriosam nemo
-      mollitia impedit unde fugit sint eveniet, minima odio ipsum sed recusandae aut iste aspernatur dolorem.
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quidem provident, dolores, vero laboriosam nemo
-      mollitia impedit unde fugit sint eveniet, minima odio ipsum sed recusandae aut iste aspernatur dolorem.
-    </p>
+    <h1><%= post.title %></h1>
+    <p> <%= post.text %> </p>
   </article>
 </body>
 
