--- a/ejs-views/posts.ejs
+++ b/ejs-views/posts.ejs
@@ -1,26 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-  <%- include('./partials/head.ejs') %>
+<%- include('./partials/head.ejs') %>
 
-<body>
-  <%- include('./partials/nav.ejs') %>
-  <h1>Posts:</h1>
-  <ul>
-    <li>
-      <article>
-        <h2>
-          <a href="/posts/1">Post title</a>
-        </h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quidem provident, dolores, vero laboriosam
-          nemo mollitia impedit unde fugit sint eveniet, minima odio ipsum sed recusandae aut iste aspernatur dolorem.
-        </p>
-        <div class="info">
-          <span>05.05.2021</span>
-          <span>Yauhen</span>
-        </div>
-      </article>
-    </li>
-  </ul>
-</body>
+  <body>
+    <%- include('./partials/nav.ejs') %>
+      <h1>Posts:</h1>
+      <ul>
+        <% if (posts.length) { %>
+          <% posts.forEach(({ id, title, date, text, author })=> { %>
+            <li>
+              <article>
+                <h2>
+                  <a href="/posts/<%= id %>">
+                    <%= title %>
+                  </a>
+                </h2>
+                <p>
+                  <%= text %>
+                </p>
+                <div class="info">
+                  <span>
+                    <%= date %>
+                  </span>
+                  <span>
+                    <%= author %>
+                  </span>
+                </div>
+              </article>
+            </li>
+            <% }) %>
+              <% } %>
+      </ul>
+  </body>
 
 </html>
