Get & Post Requests; sort les posts sur date

--- a/ejs-views/posts.ejs
+++ b/ejs-views/posts.ejs
@@ -7,7 +7,7 @@
       <h1>Posts:</h1>
       <ul>
         <% if (posts.length) { %>
-          <% posts.forEach(({ id, title, date, text, author })=> { %>
+          <% posts.forEach(({ id, title, createdAt, text, author })=> { %>
             <li>
               <article>
                 <h2>
@@ -20,7 +20,7 @@
                 </p>
                 <div class="info">
                   <span>
-                    <%= date %>
+                    <%= createdAt.toLocaleDateString() %>
                   </span>
                   <span>
                     <%= author %>
