--- a/ejs-views/posts.ejs
+++ b/ejs-views/posts.ejs
@@ -26,11 +26,28 @@
                     <%= author %>
                   </span>
                 </div>
+                <button class="btn-delete" data-id="<%= id %>">
+                  <i class="fas fa-trash-alt" data-id="<%= id %>"></i>
+                </button>
               </article>
             </li>
             <% }) %>
               <% } %>
       </ul>
+
+      <script>
+        // delete un post
+        document.addEventListener('click', (e) => {
+          const id = e.target?.dataset?.id || null;
+          if (id) {
+            fetch(`/posts/${id}`, {
+              method: 'DELETE',
+            }).then(() => {
+              window.location.reload();
+            });
+          }
+        });
+      </script>
   </body>
 
 </html>
